--- a/nl/index.html
+++ b/nl/index.html
@@ -94,7 +94,7 @@
             <div class="col-md-8">
               <div class="row no-gutters">
                 <div class="col-12">
-                  <p class="heading-greeting">Hoi, Ik ben</p>
+                  <p class="heading-greeting">Hoi, ik ben</p>
                 </div>
                 <div class="col-12">
                   <h1 class="heading-title">Jelle<br>Wierdsma</h1>
@@ -251,7 +251,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Udemy</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Complete Web Development Bootcamp</h6>
-                      <p class="card-text"><small>2021 - present</small></p>
+                      <p class="card-text"><small>2021 - heden</small></p>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
